# chat-app

./: README.md  justfile
go-chat-service/: .gitignore  go.mod  go.sum
go-chat-service/cmd/server/: main.go
go-chat-service/internal/auth/: client.go
go-chat-service/internal/chat/: connection.go  handler.go
proto/: chat.proto  user.proto
rust-user-service/: .gitignore  Cargo.toml  build.rs
rust-user-service/src/: lib.rs  main.rs  server.rs  storage.rs
